Verif/Test/Invalide/test_erreur_3.59-18.deca
// Description:
//    Programme soulevant l'erreur (3.59)
// Resultats:
//    Erreur contextuelle
//    Ligne 18 : Conversion de 'float' en 'type_classe(A)' impossible (règle 3.59)
// Attributs: exec correct automatique
//
// Historique:
//    cree le 20/01/2012

class A {
   void x(){
   }
}

A a;
{
   a = cast<A> (1.0);
}